# course_2

./: .gitignore  README.md  generators_disc.py  main.py  mylog.txt  pyproject.toml
data/: transactions.csv  transactions_excel.xlsx
home_1/src/: masks.py
home_1/tests/: test_masks.py
home_2/src/: widget.py
home_2/tests/: test_widget.py
home_3/: README.md  processing.py
modul/: log.py
src/: __init__.py  data_processing.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_currency_converter.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
